--- a/css/style.css
+++ b/css/style.css
@@ -3,5 +3,80 @@
   padding: 0;
   box-sizing: border-box; }
 
+body {
+  text-align: center;
+  font-family: 'Josefin Sans', sans-serif; }
+
+h1,
+h2,
+h3 {
+  text-transform: uppercase; }
+
 .desktop-image {
   display: none; }
+
+.hero {
+  background: url(/images/mobile/image-hero.jpg) top/100% no-repeat;
+  width: 100vw;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr); }
+  .hero__title {
+    color: #fff;
+    font: 300 2.5rem 'Josefin Sans', sans-serif;
+    text-transform: uppercase;
+    text-align: left;
+    border: 2px solid #fff;
+    padding: 2rem;
+    margin: 0 1.5rem; }
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 1.5rem; }
+  .nav__ul {
+    display: none; }
+  .nav__logo {
+    height: 2rem;
+    width: auto; }
+  .nav__menu {
+    color: #fff; }
+
+.feature {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+  .feature__image {
+    width: 85vw; }
+  .feature__title {
+    font-size: 2rem;
+    text-transform: uppercase;
+    margin: 1.5rem; }
+  .feature__text {
+    font-family: 'Alata', sans-serif;
+    margin: 0 2rem;
+    line-height: 1.5;
+    color: #8c8c8c; }
+
+.creations__cards {
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-rows: repeat(8, 1fr); }
+
+.creations__card {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin: 0 1rem; }
+  .creations__card__title {
+    color: #fff;
+    font-size: 1.5rem;
+    font-weight: 300;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    text-align: left;
+    z-index: 2; }
+  .creations__card__image {
+    width: 100%;
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+    position: relative; }
