--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,154 @@
+$gray: hsl(0, 0%, 55%);
+$dk-gray: hsl(0, 0%, 41%);
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+body {
+  text-align: center;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+h1,
+h2,
+h3 {
+  text-transform: uppercase;
+}
+
 .desktop-image {
   display: none;
+}
+
+.hero {
+  background: url(/images/mobile/image-hero.jpg) top/100% no-repeat;
+  width: 100vw;
+  // max-width: 375px;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+
+
+  &__title {
+    color: #fff;
+    font: 300 2.5rem 'Josefin Sans', sans-serif;
+    text-transform: uppercase;
+    text-align: left;
+    border: 2px solid #fff;
+    padding: 2rem;
+    margin: 0 1.5rem;
+
+  }
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 1.5rem;
+
+  &__ul {
+    display: none;
+  }
+
+  &__logo {
+    height: 2rem;
+    width: auto;
+  }
+
+  &__menu {
+    color: #fff;
+  }
+}
+
+.feature {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+
+  &__image {
+    width: 85vw;
+    
+  }
+
+  &__title {
+    font-size: 2rem;
+    text-transform: uppercase;
+    margin: 1.5rem;
+  }
+
+  &__text {
+    font-family: 'Alata', sans-serif;
+    margin: 0 2rem;
+    line-height: 1.5;
+    color: $gray;
+  }
+}
+
+.creations {
+
+
+  &__title {
+
+  }
+
+  &__button {
+
+  }
+
+  &__cards {
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-rows: repeat(8, 1fr);
+  }
+
+  &__card {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 0 1rem;
+    // grid-template-rows: 1;
+
+    &__title {
+      color: #fff;
+      font-size: 1.5rem;
+      font-weight: 300;
+      grid-column: 1 / 2;
+      grid-row: 1 / 2;
+      text-align: left;
+      // position: absolute;
+      z-index: 2;
+    }
+
+    &__image {
+      width: 100%;
+      grid-column: 1 / 3;
+      grid-row: 1 / 2;
+      position: relative;
+    }
+  }
+}
+
+.footer {
+
+  &__logo {
+
+  }
+
+  &__links {
+
+  }
+
+  &__socials {
+
+  }
+
+  &__social-icon {
+
+  }
+
+  &__text {
+
+  }
 }
