--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
 
 body {
   text-align: center;
-  font-family: 'Josefin Sans', sans-serif; }
+  font-family: 'Josefin Sans', sans-serif;
+  overflow-x: hidden; }
 
 h1,
 h2,
@@ -16,13 +17,13 @@ h3 {
   display: none; }
 
 .hero {
-  background: url(/images/mobile/image-hero.jpg) top/100% no-repeat;
-  width: 100vw;
+  background: url(/images/mobile/image-hero.jpg) no-repeat;
+  background-size: contain;
   display: grid;
   grid-template-rows: repeat(3, 1fr); }
   .hero__title {
     color: #fff;
-    font: 300 2.5rem 'Josefin Sans', sans-serif;
+    font: 300 2rem 'Josefin Sans', sans-serif;
     text-transform: uppercase;
     text-align: left;
     border: 2px solid #fff;
@@ -33,50 +34,183 @@ h3 {
   display: flex;
   justify-content: space-between;
   padding: 1.5rem; }
-  .nav__ul {
+  .nav__li {
     display: none; }
   .nav__logo {
-    height: 2rem;
+    height: 1.5rem;
     width: auto; }
   .nav__menu {
-    color: #fff; }
+    height: 1.5rem; }
 
 .feature {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  margin-bottom: 4rem; }
   .feature__image {
-    width: 85vw; }
+    width: 80%;
+    margin: 4rem 0 2rem 0; }
   .feature__title {
     font-size: 2rem;
+    font-weight: 300;
     text-transform: uppercase;
-    margin: 1.5rem; }
+    margin: 1.5rem;
+    width: 80%; }
   .feature__text {
     font-family: 'Alata', sans-serif;
     margin: 0 2rem;
     line-height: 1.5;
+    font-weight: 300;
     color: #8c8c8c; }
 
-.creations__cards {
+.creations {
   display: grid;
-  grid-gap: 1rem;
-  grid-template-rows: repeat(8, 1fr); }
+  grid-template-rows: 1fr auto 1fr;
+  align-items: center; }
+  .creations__title {
+    grid-row: 1 / 2;
+    font-size: 2rem;
+    font-weight: 300; }
+  .creations__button {
+    padding: 0.8rem 2rem;
+    font-family: inherit;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    background: #fff;
+    border: 1px solid #000;
+    margin: 1rem auto;
+    grid-row: 3 / 4; }
+  .creations__cards {
+    display: grid;
+    grid-gap: 1.5rem;
+    grid-template-rows: repeat(8, 1fr);
+    grid-row: 2 / 3; }
+  .creations__card {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 0 1rem; }
+    .creations__card__title {
+      color: #fff;
+      font-size: 1.5rem;
+      font-weight: 300;
+      grid-column: 1 / 2;
+      grid-row: 1 / 2;
+      text-align: left;
+      z-index: 2;
+      align-self: flex-end;
+      margin: 1rem; }
+    .creations__card__image {
+      width: 100%;
+      grid-column: 1 / 3;
+      grid-row: 1 / 2; }
 
-.creations__card {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  margin: 0 1rem; }
-  .creations__card__title {
-    color: #fff;
-    font-size: 1.5rem;
-    font-weight: 300;
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-    text-align: left;
-    z-index: 2; }
-  .creations__card__image {
-    width: 100%;
-    grid-column: 1 / 3;
-    grid-row: 1 / 2;
-    position: relative; }
+.footer {
+  background: #000;
+  color: #fff; }
+  .footer__logo {
+    padding: 2rem;
+    height: 5.4rem; }
+  .footer__link {
+    padding: 0.7rem;
+    text-decoration: none;
+    color: #fff; }
+  .footer__socials {
+    padding: 1rem 0; }
+  .footer__social-icon {
+    padding: 0.3rem; }
+  .footer__text {
+    padding: 1rem 0 2rem 0;
+    color: #8c8c8c; }
+
+@media (min-width: 800px) {
+  .mobile-image {
+    display: none; }
+  .desktop-image {
+    display: block; }
+  .hero {
+    background: url(/images/desktop/image-hero.jpg) center/cover;
+    padding: 0 5rem; }
+    .hero__title {
+      width: 400px;
+      font-size: 3rem;
+      padding: 1.5rem;
+      margin: 0; }
+  .nav {
+    align-items: center;
+    padding: 0; }
+    .nav__links {
+      display: flex; }
+    .nav__li {
+      display: block;
+      padding: 1rem;
+      text-decoration: none;
+      color: #fff;
+      font-family: 'Alata', sans-serif; }
+    .nav__menu {
+      display: none; }
+  .feature {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+    padding: 0 4rem;
+    max-width: 1000px;
+    margin: 0 auto; }
+    .feature__image {
+      grid-row: 1 / 3;
+      grid-column: 1 / 4;
+      height: 60%;
+      width: auto; }
+    .feature__content {
+      grid-row: 2 / 3;
+      grid-column: 4 / 7;
+      background: #fff;
+      padding: 2rem;
+      text-align: left; }
+    .feature__title {
+      width: 100%; }
+  .creations {
+    grid-template-rows: 1fr auto;
+    grid-template-columns: 1fr auto;
+    margin: 4rem auto;
+    max-width: 1000px;
+    padding: 0 2rem; }
+    .creations__title {
+      grid-column: 1 / 2;
+      justify-self: start; }
+    .creations__button {
+      grid-row: 1 / 2;
+      grid-column: 2 / 3; }
+    .creations__cards {
+      grid-column: 1 / 3;
+      grid-template-rows: repeat(2, 1fr);
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      grid-gap: 1rem; }
+    .creations__card {
+      margin: 0; }
+  .footer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    align-items: center;
+    padding: 0 4rem; }
+    .footer__logo {
+      grid-row: 1 / 2;
+      grid-column: 1 / 2;
+      padding: 0;
+      height: 1.5rem; }
+    .footer__links {
+      grid-row: 2 / 3;
+      grid-column: 1 / 2;
+      justify-self: start; }
+    .footer__link {
+      padding: 0;
+      padding-right: 0.5rem; }
+    .footer__socials {
+      grid-row: 1 / 2;
+      grid-column: 2 /3;
+      justify-self: end; }
+    .footer__text {
+      grid-row: 2 /3;
+      grid-column: 2 / 3;
+      justify-self: end; } }
