--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,18 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box; }
-
-body {
-  text-align: center;
-  font-family: 'Josefin Sans', sans-serif;
-  overflow-x: hidden; }
-
-h1,
-h2,
-h3 {
-  text-transform: uppercase; }
-
-.desktop-image {
-  display: none; }
-
 .hero {
   background: url(/images/mobile/image-hero.jpg) no-repeat;
-  background-size: contain;
+  background-size: cover;
+  height: 90vh;
   display: grid;
   grid-template-rows: repeat(3, 1fr); }
   .hero__title {
     color: #fff;
-    font: 300 2rem 'Josefin Sans', sans-serif;
+    font: 300 2.5rem 'Josefin Sans', sans-serif;
     text-transform: uppercase;
     text-align: left;
     border: 2px solid #fff;
-    padding: 2rem;
-    margin: 0 1.5rem; }
+    padding: 1rem;
+    margin: 0 1rem;
+    align-self: center; }
 
 .nav {
   display: flex;
@@ -36,98 +20,29 @@ h3 {
   padding: 1.5rem; }
   .nav__li {
     display: none; }
+    .nav__li::after {
+      transition: all 0.1s ease; }
   .nav__logo {
     height: 1.5rem;
     width: auto; }
   .nav__menu {
-    height: 1.5rem; }
+    height: 1.5rem;
+    cursor: pointer; }
 
-.feature {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 4rem; }
-  .feature__image {
-    width: 80%;
-    margin: 4rem 0 2rem 0; }
-  .feature__title {
-    font-size: 2rem;
-    font-weight: 300;
-    text-transform: uppercase;
-    margin: 1.5rem;
-    width: 80%; }
-  .feature__text {
-    font-family: 'Alata', sans-serif;
-    margin: 0 2rem;
-    line-height: 1.5;
-    font-weight: 300;
-    color: #8c8c8c; }
-
-.creations {
-  display: grid;
-  grid-template-rows: 1fr auto 1fr;
-  align-items: center; }
-  .creations__title {
-    grid-row: 1 / 2;
-    font-size: 2rem;
-    font-weight: 300; }
-  .creations__button {
-    padding: 0.8rem 2rem;
-    font-family: inherit;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    background: #fff;
-    border: 1px solid #000;
-    margin: 1rem auto;
-    grid-row: 3 / 4; }
-  .creations__cards {
-    display: grid;
-    grid-gap: 1.5rem;
-    grid-template-rows: repeat(8, 1fr);
-    grid-row: 2 / 3; }
-  .creations__card {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    margin: 0 1rem; }
-    .creations__card__title {
-      color: #fff;
-      font-size: 1.5rem;
-      font-weight: 300;
-      grid-column: 1 / 2;
-      grid-row: 1 / 2;
-      text-align: left;
-      z-index: 2;
-      align-self: flex-end;
-      margin: 1rem; }
-    .creations__card__image {
-      width: 100%;
-      grid-column: 1 / 3;
-      grid-row: 1 / 2; }
-
-.footer {
+.nav__links.active {
   background: #000;
-  color: #fff; }
-  .footer__logo {
-    padding: 2rem;
-    height: 5.4rem; }
-  .footer__link {
-    padding: 0.7rem;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  overflow: hidden; }
+  .nav__links.active .nav__li {
     color: #fff; }
-  .footer__socials {
-    padding: 1rem 0; }
-  .footer__social-icon {
-    padding: 0.3rem; }
-  .footer__text {
-    padding: 1rem 0 2rem 0;
-    color: #8c8c8c; }
 
 @media (min-width: 800px) {
-  .mobile-image {
-    display: none; }
-  .desktop-image {
-    display: block; }
   .hero {
     background: url(/images/desktop/image-hero.jpg) center/cover;
     padding: 0 5rem; }
@@ -148,13 +63,37 @@ h3 {
       color: #fff;
       font-family: 'Alata', sans-serif; }
     .nav__menu {
-      display: none; }
+      display: none; } }
+
+.feature {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 4rem; }
+  .feature__image {
+    width: 80%;
+    margin: 4rem 0 2rem 0; }
+  .feature__title {
+    font-size: 2rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin: 1.5rem auto;
+    width: 80%; }
+  .feature__text {
+    font-family: 'Alata', sans-serif;
+    margin: 0 2rem;
+    line-height: 1.5;
+    font-weight: 300;
+    color: #8c8c8c; }
+
+@media (min-width: 800px) {
   .feature {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(6, 1fr);
-    padding: 0 4rem;
-    max-width: 1000px;
+    grid-template-columns: repeat(7, 1fr);
+    padding: 0 3rem;
+    max-width: 1100px;
     margin: 0 auto; }
     .feature__image {
       grid-row: 1 / 3;
@@ -163,12 +102,71 @@ h3 {
       width: auto; }
     .feature__content {
       grid-row: 2 / 3;
-      grid-column: 4 / 7;
+      grid-column: 4 / 8;
       background: #fff;
       padding: 2rem;
       text-align: left; }
     .feature__title {
-      width: 100%; }
+      width: 100%;
+      font-size: 2.5rem; }
+    .feature__text {
+      font-size: 0.9rem; } }
+
+.creations {
+  display: grid;
+  grid-template-rows: 1fr auto 1fr;
+  align-items: center;
+  transition: all 1s ease; }
+  .creations__title {
+    grid-row: 1 / 2;
+    font-size: 2rem;
+    font-weight: 300; }
+  .creations__button {
+    padding: 0.8rem 2rem;
+    font-family: inherit;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    background: #fff;
+    border: 1px solid #000;
+    margin: 1rem auto;
+    grid-row: 3 / 4;
+    cursor: pointer;
+    transition: all 0.5s ease; }
+    .creations__button:hover {
+      color: white;
+      background: #000; }
+  .creations__cards {
+    display: grid;
+    grid-gap: 1.5rem;
+    grid-template-rows: repeat(8, 1fr);
+    grid-row: 2 / 3; }
+  .creations__card {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 0 1rem;
+    cursor: pointer; }
+    .creations__card:hover .creations__card__title {
+      color: #000; }
+    .creations__card:hover .creations__card__image {
+      opacity: 40%; }
+    .creations__card__title {
+      color: #fff;
+      font-size: 1.5rem;
+      font-weight: 300;
+      grid-column: 1 / 2;
+      grid-row: 1 / 2;
+      text-align: left;
+      z-index: 2;
+      align-self: flex-end;
+      margin: 1rem;
+      transition: all 0.7s ease; }
+    .creations__card__image {
+      width: 100%;
+      grid-column: 1 / 3;
+      grid-row: 1 / 2;
+      transition: opacity 0.7s ease; }
+
+@media (min-width: 800px) {
   .creations {
     grid-template-rows: 1fr auto;
     grid-template-columns: 1fr auto;
@@ -188,6 +186,37 @@ h3 {
       grid-gap: 1rem; }
     .creations__card {
       margin: 0; }
+      .creations__card__title {
+        grid-column: 1 / 3;
+        padding: 1.1rem; } }
+
+.footer {
+  background: #000;
+  color: #fff; }
+  .footer__logo {
+    padding: 2rem;
+    height: 5.4rem; }
+  .footer__links {
+    display: flex;
+    flex-direction: column; }
+  .footer__link {
+    padding: 0.7rem;
+    text-decoration: none;
+    color: #fff;
+    transition: all 0.5s ease; }
+  .footer__socials {
+    padding: 1rem 0; }
+  .footer__social-icon {
+    padding: 0.3rem;
+    cursor: pointer;
+    transition: all 0.1s ease; }
+    .footer__social-icon:hover {
+      border-bottom: 3px solid #fff; }
+  .footer__text {
+    padding: 1rem 0 2rem 0;
+    color: #8c8c8c; }
+
+@media (min-width: 800px) {
   .footer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -202,10 +231,11 @@ h3 {
     .footer__links {
       grid-row: 2 / 3;
       grid-column: 1 / 2;
-      justify-self: start; }
+      justify-self: start;
+      flex-direction: row; }
     .footer__link {
       padding: 0;
-      padding-right: 0.5rem; }
+      padding-right: 1.5rem; }
     .footer__socials {
       grid-row: 1 / 2;
       grid-column: 2 /3;
@@ -214,3 +244,36 @@ h3 {
       grid-row: 2 /3;
       grid-column: 2 / 3;
       justify-self: end; } }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+body {
+  text-align: center;
+  font-family: 'Josefin Sans', sans-serif;
+  overflow-x: hidden; }
+
+h1,
+h2,
+h3 {
+  text-transform: uppercase; }
+
+.nav__li:hover::after,
+.footer__link:hover::after {
+  content: '';
+  display: block;
+  width: 20px;
+  padding-top: 8px;
+  margin: 0 auto;
+  border-bottom: 2px solid #fff; }
+
+.desktop-image {
+  display: none; }
+
+@media (min-width: 800px) {
+  .mobile-image {
+    display: none; }
+  .desktop-image {
+    display: block; } }
