--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,8 @@
+@import './hero';
+@import './feature';
+@import './creations';
+@import './footer';
+
 $gray: hsl(0, 0%, 55%);
 $dk-gray: hsl(0, 0%, 41%);
 
@@ -19,167 +24,21 @@ h3 {
   text-transform: uppercase;
 }
 
+
+.nav__li:hover::after,
+.footer__link:hover::after {
+  content: '';
+  display: block;
+  width: 20px;
+  padding-top: 8px;
+  margin: 0 auto;
+  border-bottom: 2px solid #fff;
+}
+
 .desktop-image {
   display: none;
 }
 
-.hero {
-  background: url(/images/mobile/image-hero.jpg) no-repeat;
-  background-size: contain;
-  // width: 100vw;
-  // max-width: 375px;
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
-
-
-  &__title {
-    color: #fff;
-    font: 300 2rem 'Josefin Sans', sans-serif;
-    text-transform: uppercase;
-    text-align: left;
-    border: 2px solid #fff;
-    padding: 2rem;
-    margin: 0 1.5rem;
-
-  }
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  padding: 1.5rem;
-
-  &__li {
-    display: none;
-  }
-
-  &__logo {
-    height: 1.5rem;
-    width: auto;
-  }
-
-  &__menu {
-    height: 1.5rem;
-  }
-}
-
-.feature {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 4rem;
-
-  &__image {
-    width: 80%;
-    margin: 4rem 0 2rem 0;
-  }
-
-  &__title {
-    font-size: 2rem;
-    font-weight: 300;
-    text-transform: uppercase;
-    margin: 1.5rem;
-    width: 80%;
-  }
-
-  &__text {
-    font-family: 'Alata', sans-serif;
-    margin: 0 2rem;
-    line-height: 1.5;
-    font-weight: 300;
-    color: $gray;
-  }
-}
-
-.creations {
-  display: grid;
-  grid-template-rows: 1fr auto 1fr;
-  align-items: center;
-
-  &__title {
-    grid-row: 1 / 2;
-    font-size: 2rem;
-    font-weight: 300;
-  }
-
-  &__button {
-    padding: 0.8rem 2rem;
-    font-family: inherit;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    background: #fff;
-    border: 1px solid #000;
-    margin: 1rem auto;
-    grid-row: 3 / 4;
-  }
-
-  &__cards {
-    display: grid;
-    grid-gap: 1.5rem;
-    grid-template-rows: repeat(8, 1fr);
-    grid-row: 2 / 3;
-  }
-
-  &__card {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    margin: 0 1rem;
-
-    &__title {
-      color: #fff;
-      font-size: 1.5rem;
-      font-weight: 300;
-      grid-column: 1 / 2;
-      grid-row: 1 / 2;
-      text-align: left;
-      z-index: 2;
-      align-self: flex-end;
-      margin: 1rem;
-    }
-
-    &__image {
-      width: 100%;
-      grid-column: 1 / 3;
-      grid-row: 1 / 2;
-      // position: relative;
-    }
-  }
-}
-
-.footer {
-  background: #000;
-  color: #fff;
-
-  &__logo {
-    padding: 2rem;
-    height: 5.4rem;
-
-  }
-
-  &__links {
-    
-  }
-
-  &__link {
-    padding: 0.7rem;
-    text-decoration: none;
-    color: #fff;
-  }
-
-  &__socials {
-    padding: 1rem 0;
-  }
-
-  &__social-icon {
-    padding: 0.3rem;
-  }
-
-  &__text {
-    padding: 1rem 0 2rem 0;
-    color: $gray;
-  }
-}
 
 @media (min-width: 800px) {
   .mobile-image {
@@ -190,146 +49,4 @@ h3 {
     display: block;
   }
 
-  body {
-
-  }
-  
-  .hero {
-    background: url(/images/desktop/image-hero.jpg) center/cover;
-    // grid-template-rows: 1fr;
-    padding: 0 5rem;
-
-    &__title {
-      width: 400px;
-      // margin-bottom: 3rem;
-      font-size: 3rem;
-      padding: 1.5rem;
-      margin: 0;
-    }
-  }
-
-  .nav {
-    align-items: center;
-    padding: 0;
-
-    &__links {
-      display: flex;
-
-      
-    }
-
-    &__li {
-      display: block;
-      padding: 1rem;
-      text-decoration: none;
-      color: #fff;
-      font-family: 'Alata', sans-serif;
-    }
-
-    &__menu {
-      display: none;
-    }
-  }
-
-  .feature {
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(6, 1fr);
-    padding: 0 4rem;
-    max-width: 1000px;
-    margin: 0 auto;
-
-    &__image {
-      grid-row: 1 / 3;
-      grid-column: 1 / 4;
-      height: 60%;
-      width: auto;
-    }
-
-    &__content {
-      grid-row: 2 / 3;
-      grid-column: 4 / 7;
-      background: #fff;
-      padding: 2rem;
-      text-align: left;
-    }
-
-    &__title {
-      width: 100%;
-    }
-
-    &__text {
-      
-    }
-  }
-
-  .creations {
-    grid-template-rows: 1fr auto;
-    grid-template-columns: 1fr auto;
-    margin: 4rem auto;
-    max-width: 1000px;
-    padding: 0 2rem;
-
-    &__title {
-      grid-column: 1 / 2;
-      justify-self: start;
-    }
-
-    &__button {
-      grid-row: 1 / 2;
-      grid-column: 2 / 3;
-      
-    }
-
-    &__cards {
-      grid-column: 1 / 3;
-      grid-template-rows: repeat(2, 1fr);
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      // grid-template-columns: repeat(4, 1fr);
-      grid-gap: 1rem;
-    }
-
-    &__card {
-      margin: 0;
-    }
-  }
-
-  .footer {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    align-items: center;
-    // max-width: 1100px;
-    padding: 0 4rem;
-
-    &__logo {
-      grid-row: 1 / 2;
-      grid-column: 1 / 2;
-      padding: 0;
-      height: 1.5rem;
-    }
-
-    &__links {
-      grid-row: 2 / 3;
-      grid-column: 1 / 2;
-      justify-self: start;
-    }
-
-    &__link {
-      padding: 0;
-      padding-right: 0.5rem;
-    }
-
-    &__socials {
-      grid-row: 1 / 2;
-      grid-column: 2 /3;
-      justify-self: end;
-    }
-
-    &__text {
-      grid-row: 2 /3;
-      grid-column: 2 / 3;
-      justify-self: end;
-    }
-  }
 }
