--- a/scss/_creations.scss
+++ b/scss/_creations.scss
@@ -11,8 +11,8 @@
   }
 
   &__button {
-    padding: 0.8rem 2rem;
-    font-family: inherit;
+    padding: 0.5rem 2.5rem;
+    font-family: 'Alata', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
     background: #fff;
@@ -34,6 +34,7 @@
     // grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-template-rows: repeat(8, 1fr);
     grid-row: 2 / 3;
+    margin-top: 1rem;
   }
 
   &__card {
@@ -85,6 +86,7 @@
     margin: 4rem auto;
     max-width: 1000px;
     padding: 0 2rem;
+    
 
     &__title {
       grid-column: 1 / 2;
@@ -103,6 +105,7 @@
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       // grid-template-columns: repeat(4, 1fr);
       grid-gap: 1rem;
+      
     }
 
     &__card {
