--- a/scss/_feature.scss
+++ b/scss/_feature.scss
@@ -26,10 +26,11 @@
     line-height: 1.5;
     font-weight: 300;
     color: hsl(0, 0%, 55%);
+    max-width: 600px;
   }
 }
 
-@media (min-width: 800px) {
+@media (min-width: 875px) {
   .feature {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
@@ -49,17 +50,21 @@
       grid-row: 2 / 3;
       grid-column: 4 / 8;
       background: #fff;
-      padding: 2rem;
+      padding: 4rem;
+      // margin: 1rem;
       text-align: left;
     }
 
     &__title {
       width: 100%;
       font-size: 2.5rem;
+      margin: 0;
     }
 
     &__text {
       font-size: 0.9rem;
+      margin: 0;
+      
     }
   }
 }
