--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,6 +3,8 @@
 .footer {
   background: #000;
   color: #fff;
+  margin-top: 3rem;
+  padding-top: 1rem;
 
   &__logo {
     padding: 2rem;
@@ -38,6 +40,7 @@
 
   &__text {
     padding: 1rem 0 2rem 0;
+
     color: hsl(0, 0%, 55%);
   }
 }
@@ -82,6 +85,7 @@
       grid-row: 2 /3;
       grid-column: 2 / 3;
       justify-self: end;
+      padding: 0;
     }
   }
 }
