--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -3,7 +3,7 @@
 .hero {
   background: url(/images/mobile/image-hero.jpg) no-repeat;
   background-size: cover;
-  height: 90vh;
+  height: 95vh;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
 
@@ -14,7 +14,7 @@
     text-transform: uppercase;
     text-align: left;
     border: 2px solid #fff;
-    padding: 1rem;
+    padding: 2rem;
     margin: 0 1rem;
     align-self: center;
   }
@@ -25,55 +25,89 @@
   justify-content: space-between;
   padding: 1.5rem;
 
+  &__links {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    width: 100%;
+    transform: translateX(-100vw);
+    transition: all 0.8s ease-out;
+    opacity: 0;
+
+    text-align: left;
+    justify-content: center;
+    transition: all 1s ease-in-out;   
+  }
+  
+
   &__li {
-    display: none;
-    
-    &::after {
-      transition: all 0.1s ease;
-    }
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    margin: 1rem 2rem;
+    font-size: 2rem;
   }
 
   &__logo {
-    height: 1.5rem;
+    height: 2rem;
     width: auto;
+    z-index: 200;
   }
 
   &__menu {
     height: 1.5rem;
     cursor: pointer;
+    z-index: 200;
   }
 }
 
 
 .nav__links.active {
-  // display: block;
+  transform: translateX(0);
+  opacity: 1;
   background: #000;
-  color: #fff;
-  text-decoration: none;
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-
-  .nav__li {
-    color: #fff;
   }
-}
 
-@media (min-width: 800px) {
+  @media (min-width: 500px) {
+    .hero {
+      background: url(/images/desktop/image-hero.jpg) top/cover no-repeat;
+      grid-template-rows: 1fr;
+      padding: 0 2rem;
+      height: 50vh;
+  
+      &__title {
+        width: 400px;
+        // margin-bottom: 3rem;
+        font-size: 3rem;
+        padding: 1.5rem;
+        margin: 0;
+        margin-bottom: 3rem;
+      }
+    }
+
+    .nav {
+      padding: 2rem 0;
+    }
+  }
+
+
+@media (min-width: 700px) {
   .hero {
-    background: url(/images/desktop/image-hero.jpg) center/cover;
+    padding: 2rem 5rem;
+    // height: auto;
+    // background: url(/images/desktop/image-hero.jpg) center/cover;
     // grid-template-rows: 1fr;
-    padding: 0 5rem;
 
     &__title {
-      width: 400px;
+      // width: 400px;
       // margin-bottom: 3rem;
-      font-size: 3rem;
-      padding: 1.5rem;
-      margin: 0;
+      // width: 50%;
+      // font-size: 4rem;
+      // padding: 1.5rem;
+      // margin: 0;
     }
   }
 
@@ -83,20 +117,37 @@
 
     &__links {
       display: flex;
-
-      
+      flex-direction: row;
+      opacity: 1;
+      transform: translateX(0);
+      position: relative;
+      height: auto;
+      width: auto;
+      transition: none;
     }
 
     &__li {
       display: block;
+      margin: 0;
       padding: 1rem;
-      text-decoration: none;
+      // text-decoration: none;
       color: #fff;
       font-family: 'Alata', sans-serif;
+      text-transform: none;
+      font-size: 1rem;
     }
 
     &__menu {
       display: none;
+    }
+  }
+}
+
+@media (min-width: 1145px) {
+  .hero {
+    &__title {
+      font-size: 4rem;
+      max-width: 50%;
     }
   }
 }
