--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,11 @@
 .hero {
-  background: url(/images/mobile/image-hero.jpg) no-repeat;
-  background-size: cover;
+  background: url(/images/mobile/image-hero.jpg) top/cover no-repeat;
   height: 95vh;
   display: grid;
   grid-template-rows: repeat(3, 1fr); }
   .hero__title {
     color: #fff;
-    font: 300 2.5rem 'Josefin Sans', sans-serif;
-    text-transform: uppercase;
+    font-size: 2.5rem;
     text-align: left;
     border: 2px solid #fff;
     padding: 2rem;
@@ -31,41 +29,38 @@
     opacity: 0;
     text-align: left;
     justify-content: center;
-    transition: all 1s ease-in-out; }
+    background: #000; }
   .nav__li {
     color: #fff;
-    text-decoration: none;
-    text-transform: uppercase;
     margin: 1rem 2rem;
     font-size: 2rem; }
   .nav__logo {
     height: 2rem;
-    width: auto;
     z-index: 200; }
   .nav__menu {
     height: 1.5rem;
-    cursor: pointer;
-    z-index: 200; }
+    z-index: 200;
+    cursor: pointer; }
 
 .nav__links.active {
   transform: translateX(0);
-  opacity: 1;
-  background: #000; }
+  opacity: 1; }
 
 @media (min-width: 500px) {
   .hero {
     background: url(/images/desktop/image-hero.jpg) top/cover no-repeat;
-    grid-template-rows: 1fr;
-    padding: 0 2rem;
+    grid-template-rows: auto 1fr auto;
+    padding: 2rem;
     height: 50vh; }
     .hero__title {
       width: 400px;
       font-size: 3rem;
       padding: 1.5rem;
-      margin: 0;
-      margin-bottom: 3rem; }
+      margin: 0; }
   .nav {
-    padding: 2rem 0; } }
+    padding: 0; }
+    .nav__links {
+      background: none; } }
 
 @media (min-width: 700px) {
   .hero {
@@ -76,27 +71,45 @@
     .nav__links {
       display: flex;
       flex-direction: row;
-      opacity: 1;
-      transform: translateX(0);
       position: relative;
       height: auto;
       width: auto;
+      opacity: 1;
+      transform: translateX(0);
       transition: none; }
     .nav__li {
-      display: block;
       margin: 0;
       padding: 1rem;
       color: #fff;
-      font-family: 'Alata', sans-serif;
+      font-family: "Alata", sans-serif;
       text-transform: none;
-      font-size: 1rem; }
+      font-size: 1rem;
+      transition: all 0.5s ease; }
+      .nav__li::after {
+        content: "";
+        display: block;
+        padding-top: 8px;
+        border-bottom: 2px solid transparent; }
+      .nav__li:hover::after {
+        content: "";
+        display: block;
+        width: 20px;
+        padding-top: 8px;
+        margin: 0 auto;
+        border-bottom: 2px solid #fff; }
+      .nav__li:hover {
+        transform: scale(1.1); }
     .nav__menu {
       display: none; } }
 
-@media (min-width: 1145px) {
-  .hero__title {
-    font-size: 4rem;
-    max-width: 50%; } }
+@media (min-width: 1300px) {
+  .hero {
+    height: 60vh; }
+    .hero__title {
+      font-size: 4rem;
+      max-width: 35rem;
+      width: auto;
+      margin: 2rem 0; } }
 
 .feature {
   display: flex;
@@ -108,13 +121,11 @@
     width: 80%;
     margin: 4rem 0 2rem 0; }
   .feature__title {
-    font-size: 2rem;
-    font-weight: 300;
-    text-transform: uppercase;
+    width: 80%;
     margin: 1.5rem auto;
-    width: 80%; }
+    font-size: 2rem; }
   .feature__text {
-    font-family: 'Alata', sans-serif;
+    font-family: "Alata", sans-serif;
     margin: 0 2rem;
     line-height: 1.5;
     font-weight: 300;
@@ -126,8 +137,8 @@
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(7, 1fr);
-    padding: 0 3rem;
-    max-width: 1100px;
+    padding: 0 2rem;
+    max-width: 1000px;
     margin: 0 auto; }
     .feature__image {
       grid-row: 1 / 3;
@@ -143,7 +154,7 @@
     .feature__title {
       width: 100%;
       font-size: 2.5rem;
-      margin: 0; }
+      margin: 0 0 1rem 0; }
     .feature__text {
       font-size: 0.9rem;
       margin: 0; } }
@@ -155,27 +166,24 @@
   transition: all 1s ease; }
   .creations__title {
     grid-row: 1 / 2;
-    font-size: 2rem;
-    font-weight: 300; }
+    font-size: 2rem; }
   .creations__button {
+    grid-row: 3 / 4;
+    margin: 1rem auto;
     padding: 0.5rem 2.5rem;
-    font-family: 'Alata', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
     background: #fff;
     border: 1px solid #000;
-    margin: 1rem auto;
-    grid-row: 3 / 4;
+    letter-spacing: 2px;
     cursor: pointer;
     transition: all 0.5s ease; }
     .creations__button:hover {
-      color: white;
+      color: #fff;
       background: #000; }
   .creations__cards {
-    display: grid;
-    grid-gap: 1.5rem;
-    grid-template-rows: repeat(8, 1fr);
     grid-row: 2 / 3;
+    display: grid;
+    grid-template-rows: repeat(8, 1fr);
+    grid-gap: 1.5rem;
     margin-top: 1rem; }
   .creations__card {
     display: grid;
@@ -187,40 +195,39 @@
     .creations__card:hover .creations__card__image {
       opacity: 40%; }
     .creations__card__title {
-      color: #fff;
-      font-size: 1.5rem;
-      font-weight: 300;
       grid-column: 1 / 2;
       grid-row: 1 / 2;
-      text-align: left;
-      z-index: 2;
-      align-self: flex-end;
       margin: 1rem;
+      color: #fff;
+      text-align: left;
+      font-size: 1.5rem;
+      align-self: flex-end;
+      z-index: 2;
       transition: all 0.7s ease; }
     .creations__card__image {
       width: 100%;
       grid-column: 1 / 3;
       grid-row: 1 / 2;
-      transition: opacity 0.7s ease; }
+      transition: all 0.7s ease; }
 
 @media (min-width: 800px) {
   .creations {
     grid-template-rows: 1fr auto;
     grid-template-columns: 1fr auto;
     margin: 4rem auto;
-    max-width: 1000px;
-    padding: 0 2rem; }
+    padding: 0 2rem;
+    max-width: 1000px; }
     .creations__title {
       grid-column: 1 / 2;
-      justify-self: start; }
+      justify-self: start;
+      font-size: 3rem; }
     .creations__button {
       grid-row: 1 / 2;
       grid-column: 2 / 3; }
     .creations__cards {
       grid-column: 1 / 3;
       grid-template-rows: repeat(2, 1fr);
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      grid-gap: 1rem; }
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); }
     .creations__card {
       margin: 0; }
       .creations__card__title {
@@ -240,17 +247,32 @@
     flex-direction: column; }
   .footer__link {
     padding: 0.7rem;
-    text-decoration: none;
     color: #fff;
     transition: all 0.5s ease; }
+    .footer__link::after {
+      content: "";
+      display: block;
+      padding-top: 8px;
+      border-bottom: 2px solid transparent; }
+    .footer__link:hover::after {
+      content: "";
+      display: block;
+      width: 20px;
+      padding-top: 8px;
+      margin: 0 auto;
+      border-bottom: 2px solid #fff; }
+    .footer__link:hover {
+      transform: scale(1.1); }
   .footer__socials {
     padding: 1rem 0; }
   .footer__social-icon {
     padding: 0.3rem;
+    border-bottom: 3px solid transparent;
     cursor: pointer;
-    transition: all 0.1s ease; }
+    transition: all 0.5s ease; }
     .footer__social-icon:hover {
-      border-bottom: 3px solid #fff; }
+      border-bottom: 3px solid #fff;
+      transform: scale(1.1); }
   .footer__text {
     padding: 1rem 0 2rem 0;
     color: #8c8c8c; }
@@ -268,13 +290,12 @@
       padding: 0;
       height: 1.5rem; }
     .footer__links {
+      flex-direction: row;
       grid-row: 2 / 3;
       grid-column: 1 / 2;
-      justify-self: start;
-      flex-direction: row; }
+      justify-self: start; }
     .footer__link {
-      padding: 0;
-      padding-right: 1.5rem; }
+      padding: 0 1.5rem 0 0; }
     .footer__socials {
       grid-row: 1 / 2;
       grid-column: 2 /3;
@@ -292,22 +313,24 @@
 
 body {
   text-align: center;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   overflow-x: hidden; }
+
+.creations__button,
+.feature__text {
+  font-family: "Alata", sans-serif; }
+
+li,
+a {
+  text-decoration: none; }
 
 h1,
 h2,
-h3 {
-  text-transform: uppercase; }
-
-.nav__li:hover::after,
-.footer__link:hover::after {
-  content: '';
-  display: block;
-  width: 20px;
-  padding-top: 8px;
-  margin: 0 auto;
-  border-bottom: 2px solid #fff; }
+h3,
+button,
+li {
+  text-transform: uppercase;
+  font-weight: 300; }
 
 .desktop-image {
   display: none; }
