--- a/scss/_creations.scss
+++ b/scss/_creations.scss
@@ -7,33 +7,29 @@
   &__title {
     grid-row: 1 / 2;
     font-size: 2rem;
-    font-weight: 300;
   }
 
   &__button {
+    grid-row: 3 / 4;
+    margin: 1rem auto;
     padding: 0.5rem 2.5rem;
-    font-family: 'Alata', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
     background: #fff;
     border: 1px solid #000;
-    margin: 1rem auto;
-    grid-row: 3 / 4;
+    letter-spacing: 2px;
     cursor: pointer;
     transition: all 0.5s ease;
 
     &:hover {
-      color: white;
+      color: #fff;
       background: #000;
     }
   }
 
   &__cards {
-    display: grid;
-    grid-gap: 1.5rem;
-    // grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-template-rows: repeat(8, 1fr);
     grid-row: 2 / 3;
+    display: grid;
+    grid-template-rows: repeat(8, 1fr);
+    grid-gap: 1.5rem;
     margin-top: 1rem;
   }
 
@@ -42,12 +38,9 @@
     grid-template-columns: repeat(2, 1fr);
     margin: 0 1rem;
     cursor: pointer;
-    
 
     &:hover {
-      
       .creations__card {
-        
         &__title {
           color: #000;
         }
@@ -58,15 +51,14 @@
     }
 
     &__title {
-      color: #fff;
-      font-size: 1.5rem;
-      font-weight: 300;
       grid-column: 1 / 2;
       grid-row: 1 / 2;
-      text-align: left;
-      z-index: 2;
-      align-self: flex-end;
       margin: 1rem;
+      color: #fff;
+      text-align: left;
+      font-size: 1.5rem;
+      align-self: flex-end;
+      z-index: 2;
       transition: all 0.7s ease;
     }
 
@@ -74,7 +66,7 @@
       width: 100%;
       grid-column: 1 / 3;
       grid-row: 1 / 2;
-      transition: opacity 0.7s ease;
+      transition: all 0.7s ease;
     }
   }
 }
@@ -84,28 +76,24 @@
     grid-template-rows: 1fr auto;
     grid-template-columns: 1fr auto;
     margin: 4rem auto;
-    max-width: 1000px;
     padding: 0 2rem;
-    
+    max-width: 1000px;
 
     &__title {
       grid-column: 1 / 2;
       justify-self: start;
+      font-size: 3rem;
     }
 
     &__button {
       grid-row: 1 / 2;
       grid-column: 2 / 3;
-      
     }
 
     &__cards {
       grid-column: 1 / 3;
       grid-template-rows: repeat(2, 1fr);
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      // grid-template-columns: repeat(4, 1fr);
-      grid-gap: 1rem;
-      
     }
 
     &__card {
