--- a/scss/_feature.scss
+++ b/scss/_feature.scss
@@ -1,5 +1,3 @@
-
-
 .feature {
   display: flex;
   flex-direction: column;
@@ -13,15 +11,13 @@
   }
 
   &__title {
-    font-size: 2rem;
-    font-weight: 300;
-    text-transform: uppercase;
-    margin: 1.5rem auto;
     width: 80%;
+    margin: 1.5rem auto;
+    font-size: 2rem;
   }
 
   &__text {
-    font-family: 'Alata', sans-serif;
+    font-family: "Alata", sans-serif;
     margin: 0 2rem;
     line-height: 1.5;
     font-weight: 300;
@@ -35,8 +31,8 @@
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(7, 1fr);
-    padding: 0 3rem;
-    max-width: 1100px;
+    padding: 0 2rem;
+    max-width: 1000px;
     margin: 0 auto;
 
     &__image {
@@ -51,20 +47,18 @@
       grid-column: 4 / 8;
       background: #fff;
       padding: 4rem;
-      // margin: 1rem;
       text-align: left;
     }
 
     &__title {
       width: 100%;
       font-size: 2.5rem;
-      margin: 0;
+      margin: 0 0 1rem 0;
     }
 
     &__text {
       font-size: 0.9rem;
       margin: 0;
-      
     }
   }
 }
