--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,5 +1,3 @@
-
-
 .footer {
   background: #000;
   color: #fff;
@@ -9,7 +7,6 @@
   &__logo {
     padding: 2rem;
     height: 5.4rem;
-
   }
 
   &__links {
@@ -19,9 +16,28 @@
 
   &__link {
     padding: 0.7rem;
-    text-decoration: none;
     color: #fff;
     transition: all 0.5s ease;
+
+    &::after {
+      content: "";
+      display: block;
+      padding-top: 8px;
+      border-bottom: 2px solid transparent;
+    }
+
+    &:hover::after {
+      content: "";
+      display: block;
+      width: 20px;
+      padding-top: 8px;
+      margin: 0 auto;
+      border-bottom: 2px solid #fff;
+    }
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__socials {
@@ -30,17 +46,18 @@
 
   &__social-icon {
     padding: 0.3rem;
+    border-bottom: 3px solid transparent;
     cursor: pointer;
-    transition: all 0.1s ease;
-    
+    transition: all 0.5s ease;
+
     &:hover {
-    border-bottom: 3px solid #fff;
+      border-bottom: 3px solid #fff;
+      transform: scale(1.1);
     }
   }
 
   &__text {
     padding: 1rem 0 2rem 0;
-
     color: hsl(0, 0%, 55%);
   }
 }
@@ -51,7 +68,6 @@
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     align-items: center;
-    // max-width: 1100px;
     padding: 0 4rem;
 
     &__logo {
@@ -62,15 +78,14 @@
     }
 
     &__links {
+      flex-direction: row;
       grid-row: 2 / 3;
       grid-column: 1 / 2;
       justify-self: start;
-      flex-direction: row;
     }
 
     &__link {
-      padding: 0;
-      padding-right: 1.5rem;
+      padding: 0 1.5rem 0 0;
     }
 
     &__socials {
@@ -78,8 +93,6 @@
       grid-column: 2 /3;
       justify-self: end;
     }
-
-
 
     &__text {
       grid-row: 2 /3;
