--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -1,17 +1,12 @@
-
-
 .hero {
-  background: url(/images/mobile/image-hero.jpg) no-repeat;
-  background-size: cover;
+  background: url(/images/mobile/image-hero.jpg) top/cover no-repeat;
   height: 95vh;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
 
-
   &__title {
     color: #fff;
-    font: 300 2.5rem 'Josefin Sans', sans-serif;
-    text-transform: uppercase;
+    font-size: 2.5rem;
     text-align: left;
     border: 2px solid #fff;
     padding: 2rem;
@@ -36,79 +31,61 @@
     transform: translateX(-100vw);
     transition: all 0.8s ease-out;
     opacity: 0;
-
     text-align: left;
     justify-content: center;
-    transition: all 1s ease-in-out;   
+    background: #000;
   }
-  
 
   &__li {
     color: #fff;
-    text-decoration: none;
-    text-transform: uppercase;
     margin: 1rem 2rem;
     font-size: 2rem;
   }
 
   &__logo {
     height: 2rem;
-    width: auto;
     z-index: 200;
   }
 
   &__menu {
     height: 1.5rem;
-    cursor: pointer;
     z-index: 200;
+    cursor: pointer;
   }
 }
-
 
 .nav__links.active {
   transform: translateX(0);
   opacity: 1;
-  background: #000;
-  }
+}
 
-  @media (min-width: 500px) {
-    .hero {
-      background: url(/images/desktop/image-hero.jpg) top/cover no-repeat;
-      grid-template-rows: 1fr;
-      padding: 0 2rem;
-      height: 50vh;
-  
-      &__title {
-        width: 400px;
-        // margin-bottom: 3rem;
-        font-size: 3rem;
-        padding: 1.5rem;
-        margin: 0;
-        margin-bottom: 3rem;
-      }
-    }
+@media (min-width: 500px) {
+  .hero {
+    background: url(/images/desktop/image-hero.jpg) top/cover no-repeat;
+    grid-template-rows: auto 1fr auto;
+    padding: 2rem;
+    height: 50vh;
 
-    .nav {
-      padding: 2rem 0;
+    &__title {
+      width: 400px;
+      font-size: 3rem;
+      padding: 1.5rem;
+      margin: 0;
     }
   }
 
+  .nav {
+    padding: 0;
+
+    &__links {
+      background: none;
+    }
+  }
+}
 
 @media (min-width: 700px) {
   .hero {
     padding: 2rem 5rem;
-    // height: auto;
-    // background: url(/images/desktop/image-hero.jpg) center/cover;
-    // grid-template-rows: 1fr;
-
-    &__title {
-      // width: 400px;
-      // margin-bottom: 3rem;
-      // width: 50%;
-      // font-size: 4rem;
-      // padding: 1.5rem;
-      // margin: 0;
-    }
   }
 
   .nav {
@@ -118,23 +95,42 @@
     &__links {
       display: flex;
       flex-direction: row;
-      opacity: 1;
-      transform: translateX(0);
       position: relative;
       height: auto;
       width: auto;
+      opacity: 1;
+      transform: translateX(0);
       transition: none;
     }
 
     &__li {
-      display: block;
       margin: 0;
       padding: 1rem;
-      // text-decoration: none;
       color: #fff;
-      font-family: 'Alata', sans-serif;
+      font-family: "Alata", sans-serif;
       text-transform: none;
       font-size: 1rem;
+      transition: all 0.5s ease;
+
+      &::after {
+        content: "";
+        display: block;
+        padding-top: 8px;
+        border-bottom: 2px solid transparent;
+      }
+
+      &:hover::after {
+        content: "";
+        display: block;
+        width: 20px;
+        padding-top: 8px;
+        margin: 0 auto;
+        border-bottom: 2px solid #fff;
+      }
+
+      &:hover {
+        transform: scale(1.1);
+      }
     }
 
     &__menu {
@@ -143,11 +139,15 @@
   }
 }
 
-@media (min-width: 1145px) {
+@media (min-width: 1300px) {
   .hero {
+    height: 60vh;
+
     &__title {
       font-size: 4rem;
-      max-width: 50%;
+      max-width: 35rem;
+      width: auto;
+      margin: 2rem 0;
     }
   }
 }
